--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,14 +5,15 @@
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
+        android:enableOnBackInvokedCallback="true"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FoxCompat"
+        android:theme="@style/Theme.FoxCompat.Transparent"
         android:name=".MainApplication"
-        tools:targetApi="31">
+        tools:targetApi="tiramisu">
         <activity
             android:name=".SettingsActivity"
             android:exported="false"
