--- a/hiddenapis/build.gradle
+++ b/hiddenapis/build.gradle
@@ -34,6 +34,8 @@ dependencies {
         // https://github.com/LineageOS/android_lineage-sdk
         testCompileOnly 'org.cyanogenmod:platform.sdk:5.+'
     }
+    //noinspection GradleDependency (1.4+ require kotlin)
+    compileOnly 'androidx.annotation:annotation:1.3.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
