--- a/hiddenapis/build.gradle
+++ b/hiddenapis/build.gradle
@@ -21,9 +21,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
+    buildToolsVersion '33.0.2'
+    ndkVersion '25.2.9519653'
 }
 
 dependencies {
@@ -35,8 +37,8 @@ dependencies {
         testCompileOnly 'org.cyanogenmod:platform.sdk:5.+'
     }
     //noinspection GradleDependency (1.4+ require kotlin)
-    compileOnly 'androidx.annotation:annotation:1.3.0'
+    implementation 'androidx.annotation:annotation:1.6.0'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
