--- a/gradle.properties
+++ b/gradle.properties
@@ -19,4 +19,6 @@ android.useAndroidX=true
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
-android.disableAutomaticComponentCreation=false
+android.disableAutomaticComponentCreation=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonFinalResIds=false
