--- a/hiddenapis/build.gradle
+++ b/hiddenapis/build.gradle
@@ -28,6 +28,14 @@ android {
     buildFeatures {
         aidl true
     }
+
+    publishing {
+        singleVariant('release') {
+            withSourcesJar()
+            withJavadocJar()
+        }
+        // ...
+    }
 }
 
 dependencies {
@@ -51,7 +59,7 @@ afterEvaluate {
             release(MavenPublication) {
                 groupId = project.group
                 artifactId = 'hiddenapis'
-                version = '1.2.5' // JitPack only work with "1.0" as version here.
+                version = '1.2.6'
             }
         }
     }
