fix publishing maybe x2
Signed-off-by: androidacy-user <opensource@androidacy.com>

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,8 @@
 pluginManagement {
     repositories {
-        gradlePluginPortal()
         google()
         mavenCentral()
+        gradlePluginPortal()
     }
 }
 dependencyResolutionManagement {
@@ -16,6 +16,6 @@ dependencyResolutionManagement {
     }
 }
 rootProject.name = "FoxCompat"
-include ':app'
+// include ':app'
 include ':library'
 include ':hiddenapis'
