--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '7.4.2' apply false
-    id 'com.android.library' version '7.4.2' apply false
+    id 'com.android.application' version '8.0.2' apply false
+    id 'com.android.library' version '8.0.2' apply false
 }
 
 task clean(type: Delete) {
@@ -11,4 +11,5 @@ task clean(type: Delete) {
 // Required to make JitPack work?!
 task publishToMavenLocal(type: Task) {
     dependsOn(":library:publishToMavenLocal")
+    dependsOn(":hiddenapis:publishToMavenLocal")
 }
