--- a/settings.gradle
+++ b/settings.gradle
@@ -16,6 +16,6 @@ dependencyResolutionManagement {
     }
 }
 rootProject.name = "FoxCompat"
-// include ':app'
+include ':app'
 include ':library'
 include ':hiddenapis'
