fix build and maybe library
Signed-off-by: androidacy-user <opensource@androidacy.com>

--- a/hiddenapis/build.gradle
+++ b/hiddenapis/build.gradle
@@ -47,7 +47,7 @@ dependencies {
         testCompileOnly 'org.cyanogenmod:platform.sdk:5.+'
     }
     //noinspection GradleDependency (1.4+ require kotlin)
-    implementation 'androidx.annotation:annotation:1.6.0'
+    compileOnly 'androidx.annotation:annotation:1.6.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -59,7 +59,7 @@ afterEvaluate {
             release(MavenPublication) {
                 groupId = project.group
                 artifactId = 'hiddenapis'
-                version = '1.2.10'
+                version = '1.2.12'
             }
         }
     }
