fix ns + cleanup
Signed-off-by: androidacy-user <opensource@androidacy.com>

--- a/hiddenapis/build.gradle
+++ b/hiddenapis/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 android {
-    namespace 'com.github.Fox2Code.hiddenapis'
+    namespace 'com.fox2code.hiddenapis'
     compileSdk 33
 
     defaultConfig {
