--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,9 +11,14 @@ android {
         minSdk 21
         targetSdk 33
         versionCode 2
-        versionName "1.2.13"
+        versionName "1.2.14"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
+
+        aarMetadata {
+            minCompileSdk = 29
+        }
     }
 
     buildTypes {
