--- a/hiddenapis/build.gradle
+++ b/hiddenapis/build.gradle
@@ -59,9 +59,12 @@ afterEvaluate {
             release(MavenPublication) {
                 groupId = project.group
                 artifactId = 'hiddenapis'
-                version = '1.2.13'
+                version = '1.2.14'
                 pom {
                     description('AndroidX AppCompat extensions - access to hidden APIs')
+                }
+                afterEvaluate {
+                    from components.release
                 }
             }
         }
